creusot/tests/should_fail/bug/436_1.stderr
error[creusot]: called prophetic logic function "creusot_contracts::__stubs::fin" in logic context
  --> 436_1.rs:10:5
   |
10 |     pearlite! { *(^x).g }
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `pearlite` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

